test/stg/error/funArg1.stg
badArgs = FUN(x x -> y);